--- a/src/assets/styles/antd.less
+++ b/src/assets/styles/antd.less
@@ -1,9 +1,5 @@
 // @import '~antd/lib/style/themes/default.less';
-@import '~antd/dist/antd.css';
-
-body {
-    background-color: tomato;
-}
+@import '~antd/dist/antd.less';
 
 @primary-color: #5b8c00; // 全局主色
 // @link-color: #1890ff; // 链接色
