--- a/src/assets/styles/var.scss
+++ b/src/assets/styles/var.scss
@@ -10,8 +10,8 @@ $lime-color: (1: #fcffe6,
     10: #254000);
 
 
-$primary_color: map_get($lime-color, 8);
-$text_color: map_get($lime-color, 10);
-$block_color: map_get($lime-color, 4);
-$container_width: 1200px;
-$background_color: map-get($lime-color, 1);
+$primary-color: map-get($lime-color, 8);
+$text-color: map-get($lime-color, 10);
+$block-color: map-get($lime-color, 4);
+$container-width: 1200px;
+$background-color: map-get($lime-color, 1);
