--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,8 @@
-@import './assets/styles/var.scss';
+@import 'Assets/styles/var.scss';
 
 body {
   margin: 0;
-  background-color: map-get($lime-color, 1);
+  background-color: $background-color !important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,4 +13,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.blogs-body {
+  padding: 72px 24px 24px 24px;
+  max-width: $container-width;
+  width: 100%;
+  margin: auto;
 }
