--- a/src/components/footer/index.module.scss
+++ b/src/components/footer/index.module.scss
@@ -1,6 +1,6 @@
 .footer {
     display: flex;
-    flex-flow: column;
+    flex-direction: column;;
     align-items: center;
     padding: 48px;
     background-color: #fff;
