--- a/src/index.scss
+++ b/src/index.scss
@@ -24,10 +24,11 @@ code {
 }
 
 .blogs-body {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   padding: 24px;
   max-width: $container-width;
   width: 100%;
   align-self: center;
-  // margin: auto;
-  // flex: 1;
 }
