--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -1,8 +1,8 @@
 @import 'Assets/styles/var.scss';
 
 .carousel {
-    padding: 48px;
-    height: 22vh;
+    padding: 4vh;
+    height: 20vh;
     text-align: center;
     background-color: $block-color;
     border-radius: 10px;
