--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,30 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  overflow-y: scroll;
+  &::-webkit-scrollbar {
+    /*滚动条整体样式*/
+    width: 8px;
+    scrollbar-arrow-color: $primary-color;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    /*滚动条里面小方块*/
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 5px $primary-color;
+    background: $primary-color;
+    scrollbar-arrow-color: $primary-color;
+  }
+
+  &::-webkit-scrollbar-track {
+    /*滚动条里面轨道*/
+    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, .1);
+    border-radius: 0;
+    background: rgba(0, 0, 0, .1);
+  }
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
