--- a/src/index.scss
+++ b/src/index.scss
@@ -15,15 +15,15 @@ body {
   &::-webkit-scrollbar {
     /*滚动条整体样式*/
     width: 8px;
-    scrollbar-arrow-color: $primary-color;
+    scrollbar-arrow-color: $block-color;
   }
 
   &::-webkit-scrollbar-thumb {
     /*滚动条里面小方块*/
     border-radius: 5px;
-    -webkit-box-shadow: inset 0 0 5px $primary-color;
-    background: $primary-color;
-    scrollbar-arrow-color: $primary-color;
+    -webkit-box-shadow: inset 0 0 5px $block-color;
+    background: $block-color;
+    scrollbar-arrow-color: $block-color;
   }
 
   &::-webkit-scrollbar-track {
