调节样式，添加服务器异常的对应处理，添加首页列表的预览，修改首页列表长度

--- a/src/pages/about/index.module.scss
+++ b/src/pages/about/index.module.scss
@@ -1,5 +1,7 @@
 .about {
     width: 100%;
     max-width: 1200px;
-    padding: 16px;
+    padding: 16px 24px;
+    background: #fff;
+    border-radius: 10px;
 }
