--- a/src/assets/styles/var.scss
+++ b/src/assets/styles/var.scss
@@ -10,8 +10,12 @@ $lime-color: (1: #fcffe6,
     10: #254000);
 
 
-$primary-color: map-get($lime-color, 8);
-$text-color: map-get($lime-color, 10);
+
+// $primary-color: map-get($lime-color, 8);
+$primary-color: #434137;
+// $text-color: map-get($lime-color, 10);
+$text-color: #434137;
+
 $block-color: map-get($lime-color, 4);
 $container-width: 1200px;
 $background-color: map-get($lime-color, 1);
