--- a/src/index.scss
+++ b/src/index.scss
@@ -14,23 +14,24 @@ body {
   overflow-y: scroll;
   &::-webkit-scrollbar {
     /*滚动条整体样式*/
-    width: 8px;
-    scrollbar-arrow-color: $block-color;
+    width: 4px;
+    // scrollbar-arrow-color: $block-color;
+    scrollbar-arrow-color: red;
   }
 
   &::-webkit-scrollbar-thumb {
     /*滚动条里面小方块*/
-    border-radius: 5px;
-    -webkit-box-shadow: inset 0 0 5px $block-color;
-    background: $block-color;
-    scrollbar-arrow-color: $block-color;
+    border-radius: 4px;
+    background: #FDCE4E;
+    // background: $primary-color;
+    scrollbar-arrow-color: #FDCE4E;
+    // scrollbar-arrow-color: $primary-color;
   }
 
   &::-webkit-scrollbar-track {
     /*滚动条里面轨道*/
-    -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, .1);
     border-radius: 0;
-    background: rgba(0, 0, 0, .1);
+    background: #FDCE4E00;
   }
 }
 
@@ -53,11 +54,11 @@ code {
   flex: 1;
   display: flex;
   flex-direction: column;
-  margin: 100px 0 24px 0;
+  margin: 72px 0 24px 0;
   padding: 24px;
   max-width: $container-width;
   width: 100%;
   align-self: center;
-  background-color: #fff;
+  // background-color: #fff;
   border-radius: 10px;
 }
