--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -9,7 +9,7 @@
     border-radius: 10px;
     margin-bottom: 12px;
     min-height: 40vh;
-    background: #fff url('../../assets/images/cat.jpg') no-repeat 0 center;
+    // background: #fff url('../../assets/images/cat.jpg') no-repeat 0 center;
     background-size: 100%;
 
     h4 {
