--- a/src/index.scss
+++ b/src/index.scss
@@ -8,10 +8,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
-body {
   overflow-y: scroll;
+
   &::-webkit-scrollbar {
     /*滚动条整体样式*/
     width: 4px;
@@ -22,9 +21,9 @@ body {
   &::-webkit-scrollbar-thumb {
     /*滚动条里面小方块*/
     border-radius: 4px;
-    background: #FDCE4E;
+    background: $primary-color;
     // background: $primary-color;
-    scrollbar-arrow-color: #FDCE4E;
+    scrollbar-arrow-color: $primary-color;
     // scrollbar-arrow-color: $primary-color;
   }
 
@@ -34,6 +33,7 @@ body {
     background: #FDCE4E00;
   }
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -46,7 +46,6 @@ code {
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
-  background: #FDCE4E url('./assets/images/test-bg.jpg') no-repeat top center;
   background-size: 100%;
 }
 
