调整跳转找不到资源时跳转404页面，细化404页面越500页面的样式

--- a/src/pages/blog/show.module.scss
+++ b/src/pages/blog/show.module.scss
@@ -1,4 +1,8 @@
-.blog{
+:global(.ant-skeleton-paragraph li) {
+    width: inherit !important;
+}
+
+.blog {
     background: #fff;
     padding: 16px 24px;
     border-radius: 10px;
