--- a/src/pages/404/not-found.module.scss
+++ b/src/pages/404/not-found.module.scss
@@ -1,4 +1,5 @@
 .not-found {
+    padding: 24px;
     background: #fff;
     display: flex;
     flex-direction: column;
@@ -6,4 +7,20 @@
     border-radius: 10px;
     flex: 1;
     align-items: center;
+
+    img {
+        margin-right: 48px;
+    }
 }
+
+@media screen and (min-width: 992px) {
+    .not-found {
+        flex-direction: row;
+    }
+}
+
+// .description {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: flex-end;
+// }
