--- a/src/pages/500/server-error.module.scss
+++ b/src/pages/500/server-error.module.scss
@@ -1,4 +1,5 @@
 .server-error {
+    padding: 24px;
     background-color: #fff;
     border-radius: 10px;
     display: flex;
@@ -6,4 +7,15 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    img {
+        margin-right: 48px;
+    }
+}
+
+
+@media screen and (min-width: 992px) {
+    .server-error {
+        flex-direction: row;
+    }
 }
