移除了rails-resources hack方法，老老实实的写api函数；移除了创建博客时的布局；发布博客页增加博客列表侧边栏。

--- a/src/pages/blog/new.module.scss
+++ b/src/pages/blog/new.module.scss
@@ -11,7 +11,40 @@
   display: none !important;
 }
 
-// .input-title {
-//   border-top-left-radius: 10px;
-//   border-top-right-radius: 10px;
-// }
+.sider-menu {
+  border-bottom: 1px solid #eee;
+}
+
+.sider-item {
+  height: 72px !important;
+  padding-left: 24px !important;
+  display: flex !important;
+  flex-direction: column;
+  justify-content: space-around;
+  border-bottom: 1px solid #eee;
+  margin: 0 !important;
+
+  span {
+    line-height: 20px !important;
+    height: 20px !important;
+  }
+}
+
+.return-home-btn {
+  display: flex !important;
+  justify-content: flex-start;
+  align-items: center;
+
+  h4 {
+    margin-bottom: 0 !important;
+  }
+}
+
+.new-blog-btn {
+  padding-left: 16px !important;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+}
